@@ -33,5 +33,6 @@ int64 iob_write(int64 s,io_batch* b,io_write_callback cb);
 void iob_reset(io_batch* b);
 void iob_free(io_batch* b);
 void iob_prefetch(io_batch* b,uint64 bytes);
+uint64 iob_bytesleft(const io_batch* b);
 
 #endif
